# ouster-gazebo

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: ouster_dome.yaml  ouster_puck.yaml  skid_steer_control.yaml
launch/: skid_steer_gazebo.launch.py  spawn_robot.launch.py
log/: latest_list
meshes/: osdome.dae  ospuck.dae
urdf/: os0_puck.urdf.xacro  ouster_common.xacro  ouster_dome.urdf.xacro  ouster_puck.urdf.xacro  skid_steer_robot.xacro
worlds/: empty.world
